<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wallpaper_settings"
    android:title="@string/wallpaper_settings" >

    <PreferenceCategory
        android:orderingFromXml="true"
        android:persistent="true"
        android:title="@string/category_types" >
        <ListPreference
            android:defaultValue="Beroe.png"
            android:entries="@array/teams_options"
            android:entryValues="@array/teams_values"
            android:key="teams_options"
            android:summary="@string/teams_desc"
            android:title="@string/teams" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/types_options"
            android:entryValues="@array/types_values"
            android:key="types_options"
            android:summary="@string/types_desc"
            android:title="@string/animation" />

        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:defaultValue="0xff000000"
            android:key="bgcolor_options"
            android:summary="@string/bgcolor_desc"
            android:title="@string/bgcolor" />
    </PreferenceCategory>

</PreferenceScreen>